# fastapi_design

./: .gitignore  .pre-commit-config.yaml  README.md  init_db.sql  pyproject.toml
src/: main.py
src/db/: db_interface.py  engine.py  models.py
src/operations/: bookings.py  customers.py  interface.py  rooms.py
src/routers/: bookings.py  customers.py  rooms.py
tests/: test_bookings.py  utils.py
