[tool.poetry]
name = "api-design"
version = "0.1.0"
description = "API for hotel reservation system"
authors = ["q"]
readme = "README.md"
packages = [{include = "api_design"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
uvicorn = "^0.18.3"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
black = "^22.8.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
